gccida/c2/expand_builtin_return_addr
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_return_addr/src/builtins.c:849:34: error: must use 'enum' tag to refer to type 'built_in_function'
rtx  expand_builtin_return_addr( built_in_function fndecl_code, int count, rtx tem) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_return_addr/src/builtins.c:865:24: error: use of undeclared identifier 'machine_mode'
v5 = memory_address( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), tem); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_return_addr/src/builtins.c:866:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v5); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_return_addr/src/builtins.c:887:23: error: use of undeclared identifier 'machine_mode'
return gen_rtx_MEM( ( machine_mode)v9, v11); 
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_return_addr/src/obj/builtins.o] Error 1
